tests/grammar/schema/index_signature/fail_0/stderr.golden
error[E1001]: IndexSignatureError
 --> ${CWD}/main.k:3:5
  |
3 |     label: int
  |     ^ the type 'int' of schema attribute 'label' does not meet the index signature definition [str]: str
  |